# foveated-cog-map

./: .gitignore  README.md  pyproject.toml  requirements.txt  submit_all.sh  submit_all_probes.sh  submit_habitat.sh  submit_job.sh  submit_job_multi_node.sh  sync_from_cluster.sh  sync_to_cluster.sh
cfgs/: base.yaml  blind.yaml  example.yaml  foveated.yaml  matched_compute.yaml  uniform.yaml
data/: goal_vector.json  masked_heading.json  mlp_sanity.json
docker/: Dockerfile  build_with_kaniko.sh
docs/: CNAME  DATASET_SETUP.md  figures-styles.css  figures.html  foveation_design.md  hc_experiment_plan.md  hc_launch_recipe.md  index.html  narrative_revision_plan.md  style.css
experiments/: README.md  data_setup.md  encoder_capacity_scaling.md  foveation_normaliser_invariance.md  foveation_strength_ablation.md  hc_experiment_plan.md  multiseed_robustness.md  setup.md  training_dynamics_observation.md
habitat_configs/: ddppo_pointnav_blind.yaml  ddppo_pointnav_blind_gibson.yaml  ddppo_pointnav_coarse_gibson.yaml  ddppo_pointnav_foveated_gibson.yaml  ddppo_pointnav_foveated_learned_div_gibson.yaml  ddppo_pointnav_foveated_learned_gibson.yaml  ddppo_pointnav_foveated_logpolar_gibson.yaml  ddppo_pointnav_foveated_logpolar_normaliser_gibson.yaml  ddppo_pointnav_foveated_normaliser_gibson.yaml  ddppo_pointnav_foveated_resnet50_gibson.yaml  ddppo_pointnav_foveated_shifted_gibson.yaml  ddppo_pointnav_foveated_sigma12_gibson.yaml  ddppo_pointnav_foveated_sigma2_gibson.yaml  ddppo_pointnav_foveated_sigma4_gibson.yaml  ddppo_pointnav_foveated_stochastic_gibson.yaml  ddppo_pointnav_foveated_strong_gibson.yaml  ddppo_pointnav_foveated_v2_gibson.yaml  ddppo_pointnav_matched128_gibson.yaml  ddppo_pointnav_matched192_gibson.yaml  ddppo_pointnav_matched32_gibson.yaml  ddppo_pointnav_matched64_gibson.yaml  ddppo_pointnav_matched96_gibson.yaml  ddppo_pointnav_matched_gibson.yaml  ddppo_pointnav_uniform_gibson.yaml  ddppo_pointnav_uniform_resnet50_gibson.yaml  gibson_0plus_scenes.txt  mp3d_test_eval_override.yaml  mp3d_test_scenes.txt
memory_analysis/: collect_activations.py  rsa.py  run_analysis.py
patches/: habitat_lab_eval_video.patch
results/: h2_canonical.json  h2_canonical_v2.json  h2_canonical_v3.json  h2_episode_mean.json
scripts/: analyze_cross.py  analyze_gaze.py  analyze_probes.py  analyze_probes_legacy.py  collect_probes.py  collect_probing_data.py  eval_shortcut.py  evaluate.py  habitat_probe_analysis.py  habitat_probe_collect.py  habitat_probe_cross.py  habitat_probe_train.py  habitat_shortcut_eval.py  probe.py  train.py  train_probes.py  visualize.py
src/: __init__.py
tests/: test_nan_sanitisation.py  test_torch_foveation.py
website/: index.html  (+1 more)
(+799 files in other folders)
